简单修整所有类